--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -194,7 +194,7 @@ input[type="number"]::-webkit-outer-spin-button {
     }
 
 .container {
-    max-width: 1090px;
+    /*max-width: 1090px;*/
     font-family: "primaryfont_Normal";
 }
 
