--- a/WarehouseEcommerce/Views/Theme/Smart/Products/KitProductDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Products/KitProductDetail.cshtml
@@ -70,7 +70,11 @@
                                 <div class="tab-pane" id="tab-review" role="tabpanel">
                                     <form class="form-horizontal" id="form-review">
                                         <div id="review"></div>
-                                        <h2 class="heading co-heading">Write a review</h2>
+                                        <div class="form-group mt-1">
+                                            <div class="col-sm-12">
+                                                <h2 class="heading co-heading">Write a review</h2>
+                                            </div>
+                                        </div>
                                         <div class="form-group required">
                                             <div class="col-sm-12">
                                                 <label class="control-label" for="input-name">Your Name</label>
