--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -92,6 +92,7 @@
     <script src="~/Content/Theme/University/app/js/nb_custom_script.js"></script>
     <script src="~/Content/Theme/University/app/js/jquery.elevatezoom.js"></script>
     <script src="~/Content/Theme/University/app/js/jquery-confirm.min.js"></script>
+    <script src="~/Content/Theme/University/app/js/Uni_KitProductDetail_Custom.js"></script>
 </body>
 </html>
 <script>
