--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
@@ -74,7 +74,7 @@
                         }
                         else
                         {
-                            <li style="border-right:0px;"><a href="@Url.Action("logout", "User")" style="color:white;border-right:0px;">Logout</a></li>
+                            <li style="border-right:0px;"><a href="javascript:;" onclick="Logout();" style="color:white;border-right:0px;">Logout</a></li>
                         }
                     </ul>
 
